--- a/ProjetTask_2/Presentation/Presentation.csproj
+++ b/ProjetTask_2/Presentation/Presentation.csproj
@@ -55,13 +55,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Commands\DeleteBookCommand.cs" />
-    <Compile Include="Commands\AddBookCommand.cs" />
-    <Compile Include="Commands\CommandBase.cs" />
-    <Compile Include="Commands\MakeEventCommand.cs" />
-    <Compile Include="Commands\NavigateCommand.cs" />
-    <Compile Include="Services\NavigationService.cs" />
-    <Compile Include="Stores\NavigationStore.cs" />
+    <Compile Include="ViewModels\Commands\DeleteBookCommand.cs" />
+    <Compile Include="ViewModels\Commands\AddBookCommand.cs" />
+    <Compile Include="ViewModels\Commands\CommandBase.cs" />
+    <Compile Include="ViewModels\Commands\MakeEventCommand.cs" />
+    <Compile Include="ViewModels\Commands\NavigateCommand.cs" />
+    <Compile Include="ViewModels\Services\NavigationService.cs" />
+    <Compile Include="ViewModels\Stores\NavigationStore.cs" />
     <Compile Include="ViewModels\ActionViewModel.cs" />
     <Compile Include="ViewModels\DeleteBookViewModel.cs" />
     <Compile Include="ViewModels\AddBookViewModel.cs" />
@@ -87,7 +87,7 @@
     <Compile Include="Views\StartingView.xaml.cs">
       <DependentUpon>StartingView.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -95,7 +95,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -123,7 +123,6 @@
   <ItemGroup>
     <Compile Include="Model\action.cs" />
     <Compile Include="Model\catalog.cs" />
-    <Compile Include="Model\DataAPI.cs" />
     <Compile Include="Model\library.cs" />
     <Compile Include="Model\person.cs" />
     <Compile Include="Model\state.cs" />
